[package]
name = "kcddice-www"
version = "0.1.0"
edition = "2021"

# TODO: only enable sycamore ssr feature here?
[[bin]]
name = "render"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "0.2.0", features = ["color"] }
kcddice = { path = "../kcddice" }
log = "0.4.14"
sycamore = { version = "0.8.0-beta.2", features = ["ssr", "experimental-hydrate"] }
wasm-bindgen = "0.2.79"

[dependencies.web-sys]
features = ["InputEvent", "KeyboardEvent", "Location", "Storage"]
version = "0.3.56"
