[package]
name = "kcddice-www"
version = "0.1.0"
edition = "2021"

# TODO: only enable sycamore ssr feature here?
[[bin]]
name = "render-static"

[[bin]]
name = "render-browser"

[[bin]]
name = "cmd_worker"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "0.2.0", features = ["color"] }
futures-util = { version = "0.3.21", default-features = false, features = [] }
futures-channel = { version = "0.3.21", default-features = false, features = ["alloc"] }
gloo-timers = { version = "0.2.3", features = ["futures"] }
gloo-worker = "0.1.0"
kcddice = { path = "../kcddice" }
log = "0.4.14"
sycamore = { version = "0.8.0-beta.2", features = ["ssr", "experimental-hydrate", "suspense"] }
trice = "0.1.0"
wasm-bindgen = "0.2.79"

[dependencies.web-sys]
features = ["Event"]
version = "0.3.56"
