[package]
name = "kcddice"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kcddice"
path = "src/main.rs"

[dependencies]
approx = "0.5.1"
bytesize = "1.1.0"
claim = "0.5.0"
itertools = "0.10.3"
ndarray = "0.15.4"
pico-args = "0.4.2"
rand = { version = "0.8.5", default-features = false, features = [] }
rand_xoshiro = "0.6.0"
serde = { version = "1", features = ["derive"] }
statrs = "0.15.0"
tabular = "0.2.0"
trice = "0.1.0"

[dev-dependencies]
proptest = "1.0.0"
